--- a/AC-Submission-Graphics.qmd
+++ b/AC-Submission-Graphics.qmd
@@ -1,16 +1,19 @@
 ---
 title: "Agentic and Communal Final Graphics"
 author: "Robert W. Walker"
-format: 
-   html:
-     self-contained: true
+format: html
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(warning=FALSE, message=FALSE, fig.height=6, fig.retina=3, dev="CairoJPEG")
+```
+
 
 The data generation script is a separate file.  The code is here and the log is on the relevant github repository.
 
-```{r, echo=TRUE}
-# sink("./CleanTestResultsFinal-M1-10-2022.txt")
-# set.seed(103050701)
+```{r, echo=TRUE, eval=FALSE}
+sink("./CleanTestResultsFinal-M1-10-2022.txt")
+set.seed(103050701)
 library(tidyverse)
 library(readxl)
 EMData <- read_excel("Study 1 Final Version.xlsx", skip = 1)
@@ -24,7 +27,7 @@ names(EMData)[[84]]
 table(EMData.Anonymous$...84)
 names(EMData.Anonymous)[c(80,81,84)] <- c("Unselfish","Others.Opinions","Others.Interests")
 library(MCMCpack)
-# Communal.Behavior <- MCMCordfactanal(~Unselfish+Others.Opinions+Others.Interests, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=1.3, store.scores=TRUE, L0=0.5, verbose = 500000)
+Communal.Behavior <- MCMCordfactanal(~Unselfish+Others.Opinions+Others.Interests, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=1.3, store.scores=TRUE, L0=0.5, verbose = 500000)
 names(EMData)[[76]]
 table(EMData.Anonymous$...76)
 names(EMData)[[77]]
@@ -34,7 +37,7 @@ table(EMData.Anonymous$...78)
 names(EMData)[[79]]
 table(EMData.Anonymous$...79)
 names(EMData.Anonymous)[c(76:79)] <- c("Leader","Individual.Success","Assertive","Strong.Opinions")
-# Agentic.Behavior <- MCMCordfactanal(~Leader+Individual.Success+Assertive+Strong.Opinions, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=1.4, store.scores=TRUE, L0=0.5, verbose = 500000)
+Agentic.Behavior <- MCMCordfactanal(~Leader+Individual.Success+Assertive+Strong.Opinions, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=1.4, store.scores=TRUE, L0=0.5, verbose = 500000)
 names(EMData)[[13]]
 table(EMData.Anonymous$...13)
 names(EMData)[[14]]
@@ -42,7 +45,7 @@ table(EMData.Anonymous$...14)
 names(EMData)[[15]]
 table(EMData.Anonymous$...15)
 names(EMData.Anonymous)[c(13,14,15)] <- c("Encourage.Starts","Reassure","Give.Confidence")
-# Mentoring <- MCMCordfactanal(~Encourage.Starts+Reassure+Give.Confidence, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=1.5, store.scores=TRUE, L0=0.5, verbose = 500000)
+Mentoring <- MCMCordfactanal(~Encourage.Starts+Reassure+Give.Confidence, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=1.5, store.scores=TRUE, L0=0.5, verbose = 500000)
 names(EMData)[[37]]
 table(EMData.Anonymous$...37)
 names(EMData)[[38]]
@@ -50,11 +53,19 @@ table(EMData.Anonymous$...38)
 names(EMData)[[39]]
 table(EMData.Anonymous$...39)
 names(EMData.Anonymous)[c(37,38,39)] <- c("Respect","Understanding","Influence")
-# Social.Influence <- MCMCordfactanal(~Respect+Understanding+Influence, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=2.3, L0=0.5, store.scores=TRUE, verbose = 500000)
-# save.image("CleanTestResultsFinal-M1-10-2022.RData")
+Social.Influence <- MCMCordfactanal(~Respect+Understanding+Influence, data=EMData.Anonymous, factors=1, burnin=500000, mcmc=10000000, thin=1000, tune=2.3, L0=0.5, store.scores=TRUE, verbose = 500000)
+save.image("CleanTestResultsFinal-M1-10-2022.RData")
 ```
 
-The aforemention transforms the names in the datasets of interest.
+The aforemention transforms the names in the datasets of interest.  Github has a limit of 25MB file sizes necessitating a split of the total file into four parts loaded below from Github.
+
+```{r}
+load(url("https://github.com/robertwwalker/EMAC-Samples/raw/main/SI.RData"))
+load(url("https://github.com/robertwwalker/EMAC-Samples/raw/main/Communal.RData"))
+load(url("https://github.com/robertwwalker/EMAC-Samples/raw/main/Agentic-Plus.RData"))
+load(url("https://github.com/robertwwalker/EMAC-Samples/raw/main/Mentoring.RData"))
+```
+
 
 Let's now first build a table of the relevant acceptance rates.
 
